wrapped text block in a container so a correctly sized separator can be added

--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -1,6 +1,26 @@
+.text-block-container
+  margin-left: auto
+  margin-right: auto
+  padding-top: $common-spacing
+  width: 100%
+
+  @include bp('portrait')
+    padding-top: $common-spacing * 2
+    width: calc(100% - 6.4rem)
+
+  @include bp('large')
+    width: 120rem
+
+  .l-full &
+    border-top: 1px solid $color-light
+
+  .page-blocks .l-full:first-child &
+    border-top: none
+    padding-top: 0
+
 .text-block
   font-size: $font-size-small
-  margin: $common-spacing $common-spacing 0
+  margin: 0 $common-spacing 0
 
   @include bp('portrait')
     font-size: $font-size-medium
@@ -130,6 +150,10 @@
     table
       margin: $common-spacing 0
       width: 100%
+
+      @include bp('portrait')
+        margin: $common-spacing auto
+        width: 80%
 
     table.three-columns
       & > th
